[project]
name = "rrt"
version = "0.1.0"
description = "Implementation of the RRT algorithm"
authors = [
    {name = "Dly27"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rrt"
packages = [{ include = "rrt" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
pytest-cov = "^7.1.0"
ruff = "^0.9.0"
mypy = "^1.14.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes (unused imports/vars),
# I = isort (import ordering), UP = pyupgrade (modern syntax),
# B = flake8-bugbear (likely bugs).
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
warn_redundant_casts = true

